--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,3 +1,5 @@
+username=accsoulseeker01@gmail.com
+password=testtest
 ##################################################################
 # appication.properties 
 # this file should be located under ./resources directory
@@ -5,8 +7,7 @@
 #
 ##################################################################
 #provide base URL of application under test 
-env.baseurl=http://www.google.com/
-browser=firefox
+env.baseurl=http://automationpractice.com/
 env.resources=resources
 resources.load.subdirs=1
 
@@ -32,7 +33,7 @@ selenium.success.screenshots=1
 #we.command.listeners=
 #teststep.listeners=
 
-retry.count=
+retry.count=0
 
 #set true to fill bean randomly from set of testdata
 #bean.populate.random=false
