--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 			<version>${qaf.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.11.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.qmetry</groupId>
 			<artifactId>qaf-support</artifactId>
 			<version>${qaf.version}</version>
