--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>qaf-framework-maven</name>
+	<name>bench_group_java</name>
 	<comment></comment>
 	<projects>
 	</projects>
